<resources>
    <string name="app_name">便联生活</string>
    <string name="loginAccountHint">请输入11位手机号码</string>
    <string name="loginPasswordHint">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="loginAgreement">我已阅读同意便联生活</string>
    <string name="loginAgreementcontent">《使用协议》</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="or">OR</string>
    <string name="register">注册</string>
    <string name="quickLogin">快速登录</string>
    <string name="getcode">获取验证码</string>
    <string name="inputcode">请输入验证码</string>
    <string name="loginphonenum_hint">请输入11位手机号码</string>
    <string name="vercode">请输入验证码</string>
    <string name="get_vercode">获取验证码</string>
    <string name="login_pwd">请输入您的密码</string>
    <string name="regist">注册</string>
    <string name="user_agreement">我已阅读同意便联生活</string>
    <string name="user_blife">《使用协议》</string>
    <string name="com_agreemnet">使用协议</string>
    <string name="reset_pwd">重置密码</string>
    <string name="user_count">账户名</string>
    <string name="user_count_et">请输入11位手机号码</string>
    <string name="user_vercode">验证码</string>
    <string name="user_newpwd">新密码</string>
    <string name="user_new_pwd">请输入6～12位新密码</string>
    <string name="commit">确认</string>
    <string name="user_pwd">请输入6～12位密码</string>
    <string name="toast_reset_failed">重置异常</string>
    <string name="index_tab_index">首页</string>
    <string name="index_tab_bonus">红包</string>
    <string name="index_tab_adv">广告</string>
    <string name="index_tab_mine">我的</string>
    <string name="index_super_bonus">超级大红包</string>
    <string name="index_join">立即参与</string>
    <string name="index_big_bonus">本期红包：</string>
    <string name="index_link_empty_open_error">链接为空，打开失败</string>
    <string name="index_countdown">【结束倒计时】</string>
    <string name="index_countdown_ending">【正在开奖】</string>
    <string name="index_countdown_rewarding">【立即兑奖】</string>
    <string name="index_grab">大家都在抢</string>
    <string name="index_refresh">刷新</string>
    <string name="index_activity">活动</string>
    <string name="index_refresh_success">刷新成功</string>
    <string name="index_refresh_failed">刷新失败</string>
    <string name="index_bonus_ready">准备中</string>
    <string name="index_bonus_progress">进行中</string>
    <string name="index_bonus_null">已抢光</string>
    <string name="index_bonus_end">已结束</string>
    <string name="index_bonus_time">2016-01-2112:00</string>
    <string name="index_money">￥100,000,000,00</string>
    <string name="index_readying">准备中！</string>
    <string name="index_readying_hint">马上开始喽</string>
    <string name="index_ending">结束了！</string>
    <string name="index_ending_hint">下次早点来</string>
    <string name="uploadadv_adv_info">广告信息</string>
    <string name="uploadadv_business_name">商家名称</string>
    <string name="uploadadv_hint_business_name">请输入商家名称</string>
    <string name="uploadadv_adv_title">广告标题</string>
    <string name="uploadadv_hint_adv_title">请输入广告标题</string>
    <string name="uploadadv_adv_content">广告详情</string>
    <string name="uploadadv_hint_adv_content">请输入广告内容</string>
    <string name="uploadadv_adv_phone">电话</string>
    <string name="uploadadv_hint_adv_phone">请输入商家电话</string>
    <string name="uploadadv_adv_link">链接</string>
    <string name="uploadadv_adv_link_name">名称：</string>
    <string name="uploadadv_hint_adv_link_name">请输入链接名称，如进来看看、立即进入</string>
    <string name="uploadadv_adv_address">地址：</string>
    <string name="uploadadv_hint_adv_link">请输入商家链接</string>
    <string name="uploadadv_hint_adv_address">商家定位</string>
    <string name="uploadadv_hint_adv_address_input">点击这里即可投放三个目标</string>
    <string name="uploadadv_all_Required">本页有*标识的为必填项哦！</string>
    <string name="uploadadv_empty_images">未上传广告图片</string>
    <string name="uploadadv_empty_businessname">未填写商家名称</string>
    <string name="uploadadv_empty_title">未填写广告标题</string>
    <string name="uploadadv_empty_content">请您填写广告详情</string>
    <string name="uploadadv_empty_phone">请您填写广告电话</string>
    <string name="uploadadv_empty_link">请您填写广告链接</string>
    <string name="uploadadv_empty_location">请您点击定位</string>
    <string name="uploadadv_error_phone">您输入的电话有误</string>
    <string name="uploadadv_error_link">请添加http或https前缀有效链接</string>
    <string name="uploadadv_error_location">请您输入地理信息</string>
    <string name="uploadadv_next">下一步</string>
    <string name="uploadadv_photo">相册</string>
    <string name="uploadadv_camera">相机</string>
    <string name="uploadadv_cancel">取消</string>
    <string name="uploadadv_location_start">开始定位</string>
    <string name="uploadadv_location_success">定位成功</string>
    <string name="uploadadv_location_failed">定位失败</string>
    <string name="uploadadv_locationing">获取位置信息</string>
    <string name="uploadadv_location_businessaddress">商家地址</string>
    <string name="uploadadv_search">搜索</string>
    <string name="uploadadv_searchaddress">搜索地址</string>
    <string name="uploadadv_bonus">红包设置</string>
    <string name="uploadadv_bonus_sendmen">投放人群</string>
    <string name="uploadadv_sendmen_hint">暂未开通</string>
    <string name="uploadadv_bonus_sendtarget">投放目标</string>
    <string name="uploadadv_sendtarget_hint">点击这里即可投放三个目标哦！</string>
    <string name="uploadadv_sendtarget_hint_num">您已投放%1$d个目标哦！</string>
    <string name="uploadadv_bonus_sendtime">投放时间</string>
    <string name="uploadadv_bonus_sendstarttime">开始时间</string>
    <string name="uploadadv_bonus_sendendtime">结束时间</string>
    <string name="uploadadv_bonus_sendtime_hint">未添加</string>
    <string name="uploadadv_bonus_sendmennum">派发人数</string>
    <string name="uploadadv_bonus_bonus_setting">红包设置</string>
    <string name="uploadadv_bonus_sendmennum_hint">请输入红包总数</string>
    <string name="uploadadv_bonus_prize">奖项</string>
    <string name="uploadadv_bonus_men">数量/人</string>
    <string name="uploadadv_bonus_money">金额/元</string>
    <string name="uploadadv_bonus_men_hint">红包数量</string>
    <string name="uploadadv_bonus_money_hint">单个红包金额</string>
    <string name="uploadadv_bonus_randommen_hint">0</string>
    <string name="uploadadv_bonus_randommoney_hint">随机生成</string>
    <string name="uploadadv_bonus_firstprize">一等奖</string>
    <string name="uploadadv_bonus_twoprize">二等奖</string>
    <string name="uploadadv_bonus_threeprize">三等奖</string>
    <string name="uploadadv_bonus_randomprize">随机奖</string>
    <string name="uploadadv_bonus_preview">预览</string>
    <string name="uploadadv_bonus_savedraft">保存草稿</string>
    <string name="uploadadv_bonus_save_success">保存成功</string>
    <string name="uploadadv_bonus_submit">申请提交</string>
    <string name="uploadadv_bonus_ending">结束了！</string>
    <string name="uploadadv_bonus_ending_message">下次早点来</string>
    <string name="uploadadv_sendtarget">投放目标</string>
    <string name="uploadadv_confirm">确定</string>
    <string name="uploadadv_delete">删除</string>
    <string name="uploadadv_m">米</string>
    <string name="payment_title">支付</string>
    <string name="payment_alipay">支付宝</string>
    <string name="payment_alipay_hint">采用支付宝快捷支付，便捷又安全</string>
    <string name="payment_wechat">微信</string>
    <string name="payment_wechat_hint">推荐安装微信版本5.0或以上版本使用</string>
    <string name="payment_totalorder">订单总额：</string>
    <string name="payment_confirm">确认支付</string>
    <string name="payment_wechatpay_no_supported">您的微信不支持支付或您还没有安装微信</string>
    <string name="payment_pay_result_title">支付结果</string>
    <string name="payment_pay_result_success">支付成功</string>
    <string name="payment_pay_result_failed">支付失败</string>
    <string name="payment_pay_result_success_hint">我们将尽快为您发布广告</string>
    <string name="payment_pay_result_failed_hint">订单未支付成功，请重新支付</string>
    <string name="payment_pay_order">订单号</string>
    <string name="payment_pay_type">支付方式</string>
    <string name="payment_pay_account">支付账号</string>
    <string name="payment_pay_amount">支付金额</string>
    <string name="payment_pay_result_back">确认</string>
    <string name="payment_pay_restart">重新支付</string>
    <string name="payment_pay_success_share">分享一下</string>
    <string name="payment_out_starttime">此订单已过期，请重新创建</string>
    <string name="payment_out_endtime">当前时间已经超过您设置的红包结束时间</string>
    <string name="bonus_title">我的红包</string>
    <string name="bonus_congratulations">恭喜您抢得红包</string>
    <string name="bonus_not_participate">未参与</string>
    <string name="bonus_already_participate">已参与</string>
    <string name="bonus_big_bonus">最大红包</string>
    <string name="bonus_sendstarttime">开始时间：</string>
    <string name="bonus_sendendtime">结束时间：</string>
    <string name="bonus_receiveimmediately">立即领取</string>
    <string name="bonus_report">举报</string>
    <string name="bonus_share">分享</string>
    <string name="bonus_ranking_list">排行榜</string>
    <string name="bonus_grab">抢红包</string>
    <string name="bonus_grab_nmoney">已抢金额：</string>
    <string name="bonus_check_ranklist">查看排行榜</string>
    <string name="bonus_phone">一键拨打</string>
    <string name="bonus_link">商户\n链接</string>
    <string name="bonus_location">商家位置</string>
    <string name="bonus_empty_list">暂无数据</string>
    <string name="bonus_details_title">红包详情</string>
    <string name="bonus_details_business_phone">拨打商家电话</string>
    <string name="bonus_details_business_phone_empty">商家未录入电话</string>
    <string name="bonus_details_business_link_empty">商家未录入链接</string>
    <string name="bonus_details_business_location_empty">商家未录入位置</string>
    <string name="bonus_details_business_phone_cancel">取消</string>
    <string name="bonus_details_business_phone_call">呼叫</string>
    <string name="bonus_ranking_No">第</string>
    <string name="bonus_ranking_position">位</string>
    <string name="bonus_details_report_cause">请选择您的举报原因</string>
    <string name="bonus_details_submit">提交</string>
    <string name="bonus_details_submit_success">提交成功</string>
    <string name="bonus_details_name">北京便联生活科技有限公司提供</string>
    <string name="share_wechat">微信</string>
    <string name="share_timeline">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">空间</string>
    <string name="share_sina">微博</string>
    <string name="superbonus_past_winners">往期得主</string>
    <string name="superbonus_activity_info">活动介绍</string>
    <string name="superbonus_goto_participate">立即参与</string>
    <string name="superbonus_curren_winners">本期得主</string>
    <string name="superbonus_past_prize">往期大奖</string>
    <string name="superbonus_participate_mans">参与人数：</string>
    <string name="superbonus_man">人</string>
    <string name="superbonus_share">分享</string>
    <string name="superbonus_joined">已参与</string>
    <string name="superbonus_join_success">参与成功</string>
    <string name="superbonus_activity_name">活动·</string>
    <string name="superbonus_activity_adapter_name">活动</string>
    <string name="superbonus_activity_time">时间：</string>
    <string name="superbonus_activity_money">获奖金额</string>
    <string name="superbonus_activity_man">获奖人</string>
    <string name="superbonus_dialogkeywords_hint">输入图片中的文字，即可参与活动</string>
    <string name="superbonus_dialogkeywords_error">请输入正确口令</string>
    <string name="superbonus_refresh">刷新</string>
    <string name="superbonus_joined_success_hint">已参与，静候开奖</string>
    <string name="superbonus_joined_activity">活动兑奖券：</string>
    <string name="superbonus_past_winners_empty">暂无往期得主</string>
    <string name="superbonus_opening">正在开奖</string>
    <string name="superbonus_ending">立即兑奖</string>
    <string name="superbonus_reward_title">红包兑奖</string>
    <string name="adv_prepare">编辑中</string>
    <string name="adv_waiting">准备中</string>
    <string name="adv_performing">发送中</string>
    <string name="adv_finished">已完成</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_confim">确认</string>
    <string name="refund_confirm">您确定要申请余额退款吗？</string>
    <string name="identify_withdraw">实名认证后才可以提现哦!</string>
    <string name="identify_go">快去实名认证吧!</string>
    <string name="identify">实名认证</string>
</resources>