<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/button_pop_photo"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/selector_button_white"
            android:text="@string/uploadadv_photo"
            android:textColor="@color/colorblack"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_pop_camera"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/selector_button_white"
            android:text="@string/uploadadv_camera"
            android:textColor="@color/colorblack"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_pop_cancle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/selector_button_white"
            android:text="@string/uploadadv_cancel"
            android:textColor="@color/colorblack"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>