<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35"
        android:background="@color/colorwhite"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_prepare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/adv_prepare"
            android:textColor="@color/color_user_agreement"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_waiting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/adv_waiting"
            android:textColor="@color/color_user_agreement"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_performing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/adv_performing"
            android:textColor="@color/color_user_agreement"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_isfinish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/adv_finished"
            android:textColor="@color/color_user_agreement"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp2"
        android:orientation="horizontal">

        <View
            android:id="@+id/tabline1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shape_myadv_list" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_adv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>