<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRedLoginNormal"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include layout="@layout/base_topbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@mipmap/findpwd_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reset_pwd"
                android:textColor="@color/color_reset"
                android:textSize="@dimen/sp20" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp10"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:background="@color/colorwhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp18"
                    android:text="@string/user_count"
                    android:textColor="@color/color_reset"
                    android:textSize="@dimen/sp15" />

                <EditText
                    android:id="@+id/et_resetphone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp18"
                    android:background="@color/colorwhite"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:hint="@string/user_count_et"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textSize="@dimen/sp15" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:background="@color/colorwhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp18"
                    android:text="@string/user_vercode"
                    android:textColor="@color/color_reset"
                    android:textSize="@dimen/sp15" />

                <EditText
                    android:id="@+id/et_reset_vercode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp18"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="@string/vercode"
                    android:background="@color/colorwhite"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:id="@+id/tv_reset_vercode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:text="@string/get_vercode"
                    android:textColor="@color/color_common"
                    android:textSize="@dimen/sp15" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:background="@color/colorwhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp18"
                    android:text="@string/user_newpwd"
                    android:textColor="@color/color_reset"
                    android:textSize="@dimen/sp15" />

                <EditText
                    android:id="@+id/et_reset_newpwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp18"
                    android:background="@color/colorwhite"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/user_new_pwd"
                    android:textSize="@dimen/sp15" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_line">

            <TextView
                android:id="@+id/tv_newpwd_commit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:layout_marginLeft="@dimen/dp57"
                android:layout_marginRight="@dimen/dp57"
                android:layout_marginTop="@dimen/dp26"
                android:background="@drawable/selector_shape6"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/sp20" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>