<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/no_identify_lin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_backround"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp123"
        android:background="@mipmap/no_identify" />

    <TextView
        android:id="@+id/noidentify_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center_horizontal"
        android:text="@string/identify_withdraw"
        android:textColor="@color/color_user_agreement"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:gravity="center_horizontal"
        android:text="@string/identify_go"
        android:textColor="@color/color_user_agreement"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:id="@+id/noidentify_lin_go"
        android:layout_width="@dimen/dp180"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp44"
        android:background="@drawable/shape_round_stroke_mainground"
        android:gravity="center"
        android:paddingBottom="@dimen/dp13"
        android:paddingTop="@dimen/dp13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/identify"
            android:textColor="@color/colorRedLoginNormal"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</LinearLayout>