<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialogtitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"
            android:background="@drawable/dialog_shape_confirm_top"
            android:gravity="center"
            android:text="@string/refund_confirm"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/dialog_shape_confirm_bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialogmsg_cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="100dp"
                android:text="@string/dialog_cancle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="1px"
                android:layout_height="30dp"
                android:background="@color/color_fea000"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_dialogmsg_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="100dp"
                android:text="@string/dialog_confim"
                android:textColor="@color/colorRedLoginNormal"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>